[package]
name = "aqa_aoc"
version = "0.1.0"
authors = ["aQaTL <mmsoltys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1.5", default-features = false, features = ["cookies", "tls"] }
toml = "0.5"
serde = "1.0"
anyhow = "1.0"
thiserror = "1.0"